# EzInstall-Rust

./: .appveyor.yml  Cargo.toml  README.md  install.sh  uninstall.sh
src/: main.rs  packagedir.rs
src/cli/: delete_cached.rs  install.rs  list.rs  mod.rs  run_verbose.rs  uninstall.rs
src/fetch/: fetch_impl.rs  fetch_impl_curl.rs  fetch_impl_freebsdfetch.rs  mod.rs  verify.rs
src/tar/: mod.rs  tar_impl.rs  tar_impl_bsdtar.rs  tar_impl_gnutar.rs
tests/: build.rs
